providers/k8s/connection/shared/resources/testdata/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: no-tls-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: api.nexus.info
    http:
      paths:
      - backend:
          resource:
            apiGroup: k8s.example.io
            kind: MyKind
            name: my-resource
        path: /
        pathType: Prefix
  - host: alt.nexus.info
    http:
      paths:
      - backend:
          service:
            name: some-service
            port:
              name: a-service-name
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-tls
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: api.nexus.info
    http:
      paths:
      - backend:
          resource:
            apiGroup: k8s.example.io
            kind: MyKind
            name: my-resource
        path: /
        pathType: Prefix
  - host: alt.nexus.info
    http:
      paths:
      - backend:
          service:
            name: some-service
            port:
              name: a-service-name
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api.example.com
    - altapi.example.com
    secretName: my-certificates
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-to-non-existent-secret
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: api.nexus.info
    http:
      paths:
      - backend:
          resource:
            apiGroup: k8s.example.io
            kind: MyKind
            name: my-resource
        path: /
        pathType: Prefix
  - host: alt.nexus.info
    http:
      paths:
      - backend:
          service:
            name: some-service
            port:
              name: a-service-name
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api.example.com
    - altapi.example.com
    secretName: my-missing-certificates
---
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQ3ekNDQXRlZ0F3SUJBZ0lVZFZqTmhXZTJmN2ZNd21PT0dBODgycTFETzFrd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZqRVVNQklHQTFVRUF3d0xWR1Z6ZENCSmMzTjFaWEl3SUJjTk1qSXhNakl4TWpFeE56UXlXaGdQTWpBMQpNREExTURneU1URTNOREphTUd3eEN6QUpCZ05WQkFZVEFsVlRNUXN3Q1FZRFZRUUlEQUpPV1RFTU1Bb0dBMVVFCkJ3d0RUbGxETVJNd0VRWURWUVFLREFwTmVTQkRiMjF3WVc1NU1SZ3dGZ1lEVlFRTERBOU5lU0JQY21kaGJtbDYKWVhScGIyNHhFekFSQmdOVkJBTU1DazE1SUZObGNuWnBZMlV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQgpEd0F3Z2dFS0FvSUJBU [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRQ2x5aURwQjV1akpQMDMKQ1pDQytZdjU5NmZxS0hKaE5FTnRvdlBTem1iK2xjaWNHYXkwU05SS1UxZUV2Tk5PVHR1Zy9KQjZYb0QyU0k0dApKRGp3RjJKYmhrUHlRUWJ1TlVRL1lwY3FyNWhPOVkrNlZTbll3SGFweVdxeThORVhXOGJSS2VKS0pFMndZOXA1Cjc0NEtmckZUK2laUGh2YUp4QWF1UUV4aU1uZkpaRVNEa0wrSXdISUFTNHAwQi9FMVFFSGpVa1I5MVlzRGVBb3oKZTcrYU1DdXNBSk9vYWU2bms2MnRlQURXeDVDTmt2ZkhBNDVnbS9YUVdQZ2d1aExyMGVWeDFQdlFwVEs0dG43bQpXWGZwb2F0M3Q3SW1ya [...]
kind: Secret
metadata:
  name: my-certificates
  namespace: default
type: kubernetes.io/tls
