providers/k8s/connection/shared/resources/testdata/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mondoo
  namespace: default
spec:
  containers:
    - name: nginx
      image: nginx:1.21.6
      ports:
        - containerPort: 8080
      imagePullPolicy: Always
      securityContext:
        runAsNonRoot: true
        privileged: false
        readOnlyRootFilesystem: true
      resources:
        limits:
          cpu: 100m
          memory: 200Mi
        requests:
          cpu: 100m
          memory: 200Mi
      readinessProbe:
        tcpSocket:
          port: 8080
        initialDelaySeconds: 5
        periodSeconds: 10
      livenessProbe:
        tcpSocket:
          port: 8080
        initialDelaySeconds: 15
---
apiVersion: v1
kind: Pod
metadata:
  name: hello-pod-2
  namespace: default
spec:
  containers:
    - name: nginx
      image: nginx:1.21.6
      ports:
        - containerPort: 8080
      imagePullPolicy: Always
      securityContext:
        runAsNonRoot: true
        privileged: false
        readOnlyRootFilesystem: true
      resources:
        limits:
          cpu: 100m
          memory: 200Mi
        requests:
          cpu: 100m
          memory: 200Mi
      readinessProbe:
        tcpSocket:
          port: 8080
        initialDelaySeconds: 5
        periodSeconds: 10
      livenessProbe:
        tcpSocket:
          port: 8080
        initialDelaySeconds: 15
